<resources>
    <string name="account_status">Account Status</string>
    <string name="active">Active</string>
    <string name="ad_detail">Ad Detail</string>
    <string name="ad_image">Ad Image</string>
    <string name="add_a_file">Add a File</string>
    <string name="advertise">ADVERTISE</string>
    <string name="all">All</string>
    <string name="app_does_not_have_access_to_your_camera">App does not have access to your camera. To enable access, tap settings and turn on Camera.</string>
    <string name="app_does_not_have_access_to_your_photos">App does not have access to your photos. To enable access, tap settings and turn on Photo Library Access.</string>
    <string name="app_does_not_have_access_to_your_video">App does not have access to your video. To enable access, tap settings and turn on Video Library Access.</string>
    <string name="are_your_sure_that_you_want_to_cancel_registration">Are your sure that you want to cancel the registration process?</string>
    <string name="audio_call">Audio Call</string>
    <string name="calling">Calling...</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="checking_connection">Checking Connection...</string>
    <string name="city">City</string>
    <string name="connecting">Connecting...</string>
    <string name="connection_error">Connection Error</string>
    <string name="course">Course</string>
    <string name="day">DAY</string>
    <string name="days">DAYS</string>
    <string name="degree">Degree</string>
    <string name="degree_optional">Degree (Optional)</string>
    <string name="delete">Delete</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_image">Delete Image</string>
    <string name="dialing">Dialing...</string>
    <string name="do_you_want_to_delete_this_ad">Do you want to delete this ad</string>
    <string name="do_you_want_to_delete_this_course">Do you want to delete this course?</string>
    <string name="do_you_want_to_delete_this_file">Do you want to delete this file?</string>
    <string name="do_you_want_to_delete_this_lecture">Do you want to delete this lecture?</string>
    <string name="do_you_want_to_go_live">Do you want to go live?</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="document">Document</string>
    <string name="documents">Documents</string>
    <string name="documents_has_been_uploaded">Documents has been uploaded</string>
    <string name="edit_ad_detail">Edit Ad Detail</string>
    <string name="edit_course">Edit Course</string>
    <string name="add_course">Add Course</string>
    <string name="edit_lecture">Edit Lecture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="ended">Ended</string>
    <string name="error">Error</string>
    <string name="fetching_data">Fetching Data</string>
    <string name="fetching_lecture_information">Fetching Lecture Information</string>
    <string name="fetching_user_information">Fetching User Information</string>
    <string name="file">File</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="followings">Followings</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="gender_optional">Gender (Optional)</string>
    <string name="go_live">Go Live</string>
    <string name="hour">HOUR</string>
    <string name="hours">HOURS</string>
    <string name="i_seek_to_learn_view_here">I SEEK TO LEARN - VIEW HERE</string>
    <string name="if_you_are_interested_to_advertise">If you are interested to advertise in our platform, Please send us your request through email</string>
    <string name="in">IN</string>
    <string name="in_few_mins">IN FEW MINS</string>
    <string name="inactive">Inactive</string>
    <string name="institute_ads">Institute Ads</string>
    <string name="institution">Institution</string>
    <string name="institution_ads">Institution Ads</string>
    <string name="institution_banner">Institution Banner</string>
    <string name="institution_name">Institution name</string>
    <string name="institution_type">Institution Type</string>
    <string name="instructor">Instructor</string>
    <string name="instructor_profile">Instructor Profile</string>
    <string name="joined">Joined</string>
    <string name="language">Language</string>
    <string name="app_language">App Language</string>
    <string name="lecture">Lecture</string>
    <string name="lecture_attachments">Lecture Attachments</string>
    <string name="lecture_video">Lecture Video</string>
    <string name="live">Live</string>
    <string name="live_ended">LIVE ENDED</string>
    <string name="live_stream">Live Stream</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
    <string name="mail_client_not_found">Mail Client not found</string>
    <string name="membership">Membership</string>
    <string name="message">Message</string>
    <string name="message_text_should_be_at_leats_10_characters">Message text should be at leats 10 characters</string>
    <string name="message_text_should_not_be_more_than_120_characters">Message text should not be more than 120 characters</string>
    <string name="mins">MINS</string>
    <string name="my_ads">MY ADS</string>
    <string name="new_lecture">New Lecture</string>
    <string name="new_message">New Message</string>
    <string name="no">No</string>
    <string name="not_live_yet">NOT LIVE YET</string>
    <string name="ok">OK</string>
    <string name="open_instructor_profile">Open Instructor Profile</string>
    <string name="options">Options</string>
    <string name="password">Password</string>
    <string name="password_reset_link_sent">Password reset link has been sent to your email</string>
    <string name="password_should_be_between_6_to_10_characters">Password should be between 6 to 10 characters</string>
    <string name="phone_library">Phone Library</string>
    <string name="plans">Plans</string>
    <string name="please_check_your_internet_connection_to_ensure_the_app_works_fine.">Please check your internet connection to ensure the app works fine.</string>
    <string name="please_choose_an_option">Please choose an option</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="please_enter_private_tutoring_information">Please enter Private Tutoring information</string>
    <string name="please_enter_the_description">Please enter the description</string>
    <string name="description">description</string>
    <string name="please_enter_the_mobile_number">Please enter the mobile number</string>
    <string name="please_enter_the_name">Please enter the name</string>
    <string name="please_enter_the_specialization">Please enter the specialization</string>
    <string name="please_enter_the_title">Please enter the title</string>
    <string name="please_enter_the_video_url">Please enter the video URL</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_fill_your_private_tutoring_information">Please fill your private tutoring information in your profile before subscribing to a plan</string>
    <string name="please_follow_this_instructor_before_using_the_content">Please follow this instructor before using the content</string>
    <string name="please_follow_this_instructor_before_using_this_feature">Please follow this instructor before using this feature</string>
    <string name="please_login_before_using_this_feature">Please login before using this feature</string>
    <string name="please_select_a_city">Please select a city</string>
    <string name="please_select_a_country">Please select a country</string>
    <string name="please_select_a_country_before_selecting_the_city">Please select a country before selecting the city.</string>
    <string name="please_select_a_degree">Please select a degree</string>
    <string name="please_select_a_gender">Please select a gender</string>
    <string name="please_select_a_language">Please select a language</string>
    <string name="please_select_a_program">Please select a program</string>
    <string name="please_select_a_video_file">Please select a video file</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="please_select_one_of_the_options">Please select one of the options</string>
    <string name="please_select_one_of_the_plans">Please select one of the plans</string>
    <string name="please_select_the_ad_image">Please select the ad image</string>
    <string name="please_select_the_date_and_time">Please select the date &amp; time</string>
    <string name="please_select_the_institution_type">Please select the institution type</string>
    <string name="please_select_the_plan">Please select the plan</string>
    <string name="please_select_the_subject_taught">Please select the subject taught</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_type_a_valid_email">Please type a valid email</string>
    <string name="please_type_your_password">Please type your password</string>
    <string name="please_wait">Please wait</string>
    <string name="private_tutoring">Private Tutoring</string>
    <string name="private_tutors">Private Tutors</string>
    <string name="profile">Profile</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="purchase_error">Purchase Error</string>
    <string name="registration">Registration</string>
    <string name="saving">Saving</string>
    <string name="seeks_to_learn">Seeks to Learn</string>
    <string name="send">Send</string>
    <string name="send_email">Send Email</string>
    <string name="sending">Sending...</string>
    <string name="settings">Settings</string>
    <string name="soon">SOON</string>
    <string name="status_expired">Status: Expired</string>
    <string name="student">Student</string>
    <string name="video_call">Video Call</string>
    <string name="country">Country</string>
    <string name="program">Program</string>
    <string name="subject">Subject</string>
    <string name="fees_per_hour">Fees per hour</string>
    <string name="search">Search</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="mobile_optional">Mobile (Optional)</string>
    <string name="my_profile">My Profile</string>
    <string name="instructors">Instructors</string>
    <string name="courses">Courses</string>
    <string name="clear">CLEAR</string>
    <string name="home">Home</string>
    <string name="search_filters">Search Filters</string>
    <string name="tuition_type">Tuition Type</string>
    <string name="tutoring_experience_optional">Tutoring Experience (Optional)</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="teaching_mode">Teaching mode</string>
    <string name="program_of_study_optional">Program of Study (Optional)</string>
    <string name="specialization">Specialization</string>
    <string name="institutions">Institutions</string>
    <string name="subject_taught">Subject Taught</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="newest_to_oldest">Newest to Oldest</string>
    <string name="oldest_to_newest">Oldest to Newest</string>
    <string name="institution_about">About institution (Optional)</string>
</resources>