<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <app.core.custom.TopHeader
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hideStatusBar="true"
        app:layout_constraintTop_toTopOf="parent"
        app:showLeftIcon="true"
        app:title="@string/allow_permissions" />

    <LinearLayout
        android:id="@+id/permissionSettingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <app.uicomponents.CustomSettingToggle
            android:id="@+id/chatPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general"
            app:text="@string/message" />

        <app.uicomponents.CustomSettingToggle
            android:id="@+id/audioCallPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/audio_call" />

        <app.uicomponents.CustomSettingToggle
            android:id="@+id/videoCallPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/video_call" />

        <app.uicomponents.CustomSettingToggle
            android:id="@+id/emailPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/email" />

    </LinearLayout>

</LinearLayout>